crate: test type conversion